--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,2 @@
-<ul>
-  <% @user.attributes.each do |k, v| %>
-    <li>
-      <b><%= k %>&nbsp;:</b> <%= v %></b>
-    </li>
-  <% end %>
-</ul>
+<h1>User</h1>
+<%= render 'application/data', data: @user %>
